--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.container {
+    display: flex;
+    max-width: 600px;
+    flex-direction: column;
+    margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 10px;
+    margin: 10px 0;
+    height: 35px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search-container button {
+    cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text-input {
+    width: 80%;
 }
 
-.App-link {
-  color: #61dafb;
+.todo-item {
+    padding: 5px 10px;
+    justify-content: space-between;
+    display: flex;
+    background: aliceblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.delete-btn {
+    width: 45px;
+    height: 45px;
+    cursor: pointer;
+}
+
+.text {
+    cursor: pointer;
+    width: 100%;
+}
+
+.completed {
+    text-decoration: line-through;
 }
